# pytorch-tools

.github/workflows/: generate_op_deps_graph.yaml
benchmark/: CMakeLists.txt  Makefile  README.md  aggregates.sh  boxing.cpp  boxing.md  boxing.py  build_pytorch.sh  callgrind.cpp  callgrind.md  callgrind.sh  common.h  common.py  matrix_indexing.cpp  matrix_indexing.md  matrix_indexing.py  matrix_indexing.sh  microbench.cpp  microbench.md  microbench.py  microbench.sh  microbench_aggregates.sh  mm.cpp  mm.py  run.sh
bloaty/: analyze_android.sh
code_analyzer/: README.md  build.sh
codebrowser/: README.md  build.sh
cpp_demo/: build.sh
